--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,19 @@
 * {
-    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
     padding: 0;
-    height: auto;
     font-family: "Poppins","Helvetica Neue",Helvetica,Arial,sans-serif !important;
 }
 
+a, a:visited, a:focus, a:active, a:hover{
+    outline:0 none !important;
+}
 .banner {
     background-repeat: no-repeat;
     background-position: 50%;
@@ -24,7 +27,7 @@ body {
     color: #fff;
     width: 100%;
     margin: 0 auto;
-    padding: 20% 0 30% 0;
+    padding: 25% 0 30% 0;
 }
 .banner-text-wrapper span {
     display: block;
@@ -61,57 +64,42 @@ body {
     padding: 20px;
     -webkit-transition: 0.2s ease-out;
     transition: 0.2s ease-out;
+    text-align: center;
 }
 .fill-bg-color {
     background-color: #fff;
     -webkit-transition: 0.2s ease-out;
     transition: 0.2s ease-out;
     padding: 15px;
+    -moz-box-shadow: 0 0 20px 1px rgba(0,0,0,.1);
+    -webkit-box-shadow: 0 0 20px 1px rgba(0,0,0,.1);
+    box-shadow: 0 0 20px 1px rgba(0,0,0,.1);
 }
 
-/*  starting state of animation   */
-.fade-enter {
-    right: 100px;
-}
-
-
-/*  end state of animation   */
-.fade-enter-active {
-    right: 0px;
-    transition: 0.5s ease;
-}
-
-.fade-leave {
-    right: 0px;
-}
-
-.fade-leave-active {
-    right: -100px;
-    transition: 0.5s ease;
-}
-
-/*   Keyframes animate   */
-
-/*@keyframes bounce {
-    0%, 20%, 60%, 100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
+@-moz-keyframes imageFromLeft {
+    0% {
+        transform: translate3d(-200px, 0px, 0px);
     }
-
-    40% {
-        -webkit-transform: translateY(-20px);
-        transform: translateY(-20px);
-    }
-
-    80% {
-        -webkit-transform: translateY(-10px);
-        transform: translateY(-10px);
+    100% {
+        transform: translate3d(0px, 0px, 0px);
     }
 }
-
-.banner-text-wrapper:hover {
-    animation: bounce 1s;
-} */
+@-webkit-keyframes imageFromLeft {
+     0% {
+         transform: translate3d(-200px, 0px, 0px);
+     }
+     100% {
+         transform: translate3d(0px, 0px, 0px);
+     }
+ }
+@-o-keyframes imageFromLeft {
+      0% {
+          transform: translate3d(-200px, 0px, 0px);
+      }
+      100% {
+          transform: translate3d(0px, 0px, 0px);
+      }
+  }
 @keyframes imageFromLeft {
     0% {
         transform: translate3d(-200px, 0px, 0px);
@@ -122,8 +110,33 @@ body {
 }
 
 .device-1 {
-    -webkit-animation: imageFromLeft 1s ease-in; /* Safari 4.0 - 8.0 */
+    -webkit-animation: imageFromLeft 1s ease-in;
     animation: imageFromLeft 1s ease-in;
+}
+
+@-moz-keyframes imageFromRight {
+    0% {
+        transform: translate3d(200px, 0px, 0px);
+    }
+    100% {
+        transform: translate3d(0px, 0px, 0px);
+    }
+}
+@-webkit-keyframes imageFromRight {
+    0% {
+        transform: translate3d(200px, 0px, 0px);
+    }
+    100% {
+        transform: translate3d(0px, 0px, 0px);
+    }
+}
+@-o-keyframes imageFromRight {
+    0% {
+        transform: translate3d(200px, 0px, 0px);
+    }
+    100% {
+        transform: translate3d(0px, 0px, 0px);
+    }
 }
 @keyframes imageFromRight {
     0% {
@@ -135,8 +148,53 @@ body {
 }
 
 .device-2 {
-    -webkit-animation: imageFromRight 1s ease-in; /* Safari 4.0 - 8.0 */
+    -webkit-animation: imageFromRight 1s ease-in;
     animation: imageFromRight 1s ease-in;
+}
+@keyframes bounce {
+    0%, 20%, 60%, 100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    40% {
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+
+    80% {
+        -webkit-transform: translateY(-5px);
+        transform: translateY(-5px);
+    }
+}
+.device-2.move {
+    -webkit-animation: bounce 1s infinite;
+    animation: bounce 1s infinite;
+}
+
+@-moz-keyframes contentMoveUp {
+    0% {
+        transform: translate3d(0px, 80px, 0px);
+    }
+    100% {
+        transform: translate3d(0px, 0px, 0px);
+    }
+}
+@-webkit-keyframes contentMoveUp {
+    0% {
+        transform: translate3d(0px, 80px, 0px);
+    }
+    100% {
+        transform: translate3d(0px, 0px, 0px);
+    }
+}
+@-o-keyframes contentMoveUp {
+    0% {
+        transform: translate3d(0px, 80px, 0px);
+    }
+    100% {
+        transform: translate3d(0px, 0px, 0px);
+    }
 }
 @keyframes contentMoveUp {
     0% {
@@ -147,7 +205,7 @@ body {
     }
 }
 .banner-text-wrapper {
-    -webkit-animation: contentMoveUp 1s ease-in; /* Safari 4.0 - 8.0 */
+    -webkit-animation: contentMoveUp 1s ease-in;
     animation: contentMoveUp 1s ease-in;
 }
 @media (min-width: 768px) {
@@ -161,7 +219,7 @@ body {
     }
     .banner-text-wrapper {
         width: 90%;
-        padding-top: 10%;
+        padding-top: 15%;
     }
     .banner-text-wrapper p {
         font-size: 18px;
@@ -207,8 +265,8 @@ body {
     .get-start-link-wrapper a {
         color: #fff;
         font-size: 12px;
-        -webkit-transition: 0.5s ease;
-        transition: 0.5s ease;
+        -webkit-transition: 0.3s ease-out;
+        transition: 0.3s ease-out;
         cursor:pointer;
     }
     .get-start-link-wrapper a:hover {
@@ -216,6 +274,7 @@ body {
         color: #fff;
     }
     .get-start-btn {
+        display: inline-block;
         background-color: #00a5bd;
         padding: 3px 15px;
         border-radius: 15px;
@@ -223,17 +282,46 @@ body {
         -webkit-transition: 0.5s ease;
         transition: 0.5s ease;
     }
+
+    @keyframes bounce {
+        0%, 20%, 60%, 100% {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+        }
+
+        40% {
+            -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+        }
+
+        80% {
+            -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+        }
+    }
+    .get-start-btn:link, .get-start-btn:visited {
+        text-decoration: none;
+        color: #fff;
+    }
     .get-start-btn:hover {
-        background: rgba(0,0,0,0);
-        color: #3a7999;
-        box-shadow: inset 0 0 0 3px #00a5bd;
+        animation: bounce 0.5s;
+    }
+    .get-start-btn:active {
+        background-color: #3be98f;
+    }
+    .login-btn:link, .login-btn:visited {
+        text-decoration: none;
+        color: #fff;
     }
     .login-btn:hover {
         padding: 3px 15px;
         border-radius: 15px;
         background: rgba(0,0,0,0);
         color: #3a7999;
-        box-shadow: inset 0 0 0 3px #00a5bd;
+        box-shadow: inset 0 0 0 1px #00a5bd;
+    }
+    .login-btn:active {
+        color: #fff;
     }
     .menu-list-item {
         font-weight: 500;
@@ -264,6 +352,8 @@ body {
     .fill-bg-color {
         background-color: #fff;
         padding: 10px;
+        -moz-box-shadow: 0 0 20px 1px rgba(0,0,0,.1);
+        -webkit-box-shadow: 0 0 20px 1px rgba(0,0,0,.1);
         box-shadow: 0 0 20px 1px rgba(0,0,0,.1);
         -webkit-transition: all 0.3s ease-out;
         transition: all 0.3s ease-out;
@@ -276,11 +366,9 @@ body {
         border-radius: 15px;
         background: rgba(0,0,0,0);
         color: #00a5bd;
-        box-shadow: inset 0 0 0 3px #00a5bd;
+        box-shadow: inset 0 0 0 1px #00a5bd;
     }
-    .get-start-btn.link-color-change:hover {
-        color: #00a5bd;
-    }
+
 }
 
 @media (min-width: 990px) {
