--- a/style/style.css
+++ b/style/style.css
@@ -17,19 +17,21 @@ a, a:visited, a:focus, a:active, a:hover {
 
 .banner {
     background-repeat: no-repeat;
-    background-position: 50%;
-    background-attachment: scroll;
+    background-position: center center;
+    background-attachment: fixed;
     background-size: cover;
-    min-height: 500px;
+    height: 100vh;
     background-color: #2C2C2C;
-    position: relative;
 }
-
+.page-two {
+    height: 100vh;
+}
 .banner-overlay {
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .banner-text-wrapper {
@@ -37,7 +39,6 @@ a, a:visited, a:focus, a:active, a:hover {
     color: #fff;
     width: 100%;
     margin: 0 auto;
-    padding: 25% 0 30% 0;
 }
 
 .banner-text-wrapper span {
@@ -49,29 +50,16 @@ a, a:visited, a:focus, a:active, a:hover {
     line-height: 26px;
 }
 
-.banner-image {
-    padding-bottom: 400px;
-}
-
 .banner-image-wrapper {
     text-align: center;
-    position: relative;
+    margin-top: 60px;
 }
 
-.banner-image .device-1 {
-    width: 95%;
-    margin-top: -25%;
+.banner-image-wrapper img:not(:last-child) {
+    margin-right: 20px;
 }
-
-.banner-image .device-2 {
-    width: 20%;
-    position: absolute;
-    top: -35%;
-    right: 7%;
-}
-
 .brand-image {
-    width: 130px;
+    width: 100px;
     will-change: transform;
 }
 
@@ -87,7 +75,7 @@ a, a:visited, a:focus, a:active, a:hover {
 }
 
 .fill-bg-color {
-    background-color: #fff;
+    background-color: #000;
     -webkit-transition: 0.2s ease-out;
     transition: 0.2s ease-out;
     padding: 15px;
@@ -133,8 +121,14 @@ a, a:visited, a:focus, a:active, a:hover {
 }
 
 .device-1 {
-    -webkit-animation: imageFromLeft 1s ease-in;
-    animation: imageFromLeft 1s ease-in;
+    //-webkit-animation: imageFromLeft 1s ease-in;
+    //animation: imageFromLeft 1s ease-in;
+    width: 50px;
+}
+.device-3 {
+    //-webkit-animation: imageFromLeft 1s ease-in;
+    //animation: imageFromLeft 1s ease-in;
+    width: 50px;
 }
 
 @-moz-keyframes imageFromRight {
@@ -174,8 +168,9 @@ a, a:visited, a:focus, a:active, a:hover {
 }
 
 .device-2 {
-    -webkit-animation: imageFromRight 1s ease-in;
-    animation: imageFromRight 1s ease-in;
+    //-webkit-animation: imageFromRight 1s ease-in;
+    //animation: imageFromRight 1s ease-in;
+    width: 50px;
 }
 
 @keyframes bounce {
@@ -239,6 +234,7 @@ a, a:visited, a:focus, a:active, a:hover {
 .banner-text-wrapper {
     -webkit-animation: contentMoveUp 1s ease-in;
     animation: contentMoveUp 1s ease-in;
+    padding-top: 20%;
 }
 
 @media (min-width: 768px) {
@@ -284,6 +280,7 @@ a, a:visited, a:focus, a:active, a:hover {
 
     .header-wrapper ul {
         padding-left: 0;
+        margin-top: 10px;
     }
 
     .menu-list {
@@ -321,7 +318,7 @@ a, a:visited, a:focus, a:active, a:hover {
 
     .get-start-btn {
         display: inline-block;
-        background-color: #00a5bd;
+        background-color: #FF4A17;
         padding: 3px 15px;
         border-radius: 15px;
         margin-right: 20px;
@@ -355,7 +352,7 @@ a, a:visited, a:focus, a:active, a:hover {
     }
 
     .get-start-btn:active {
-        background-color: #3be98f;
+        background-color: #99AACC;
     }
 
     .login-btn:link, .login-btn:visited {
@@ -367,8 +364,8 @@ a, a:visited, a:focus, a:active, a:hover {
         padding: 3px 15px;
         border-radius: 15px;
         background: rgba(0, 0, 0, 0);
-        color: #3a7999;
-        box-shadow: inset 0 0 0 1px #00a5bd;
+        color: #FF4A17;
+        box-shadow: inset 0 0 0 1px #FF4A17;
     }
 
     .login-btn:active {
@@ -381,19 +378,19 @@ a, a:visited, a:focus, a:active, a:hover {
 
     .menu-list-item.active {
         color: #fff;
-        border-bottom: 3px solid #3be98f;
+        border-bottom: 2px dotted #FF4A17;
         -webkit-transition: 0.5s ease;
         transition: 0.5s ease;
     }
 
     .menu-list-item.link-color-change {
-        color: #00a5bd;
+        color: #fff;
     }
 
     .menu-list-item:after {
         display: block;
         content: '';
-        border-bottom: 3px solid #3be98f;
+        border-bottom: 2px dotted #FF4A17;
         transform: scaleX(0);
         -webkit-transition: 0.5s ease;
         transition: 0.5s ease;
@@ -406,7 +403,7 @@ a, a:visited, a:focus, a:active, a:hover {
     }
 
     .fill-bg-color {
-        background-color: #fff;
+        background-color: #000;
         padding: 10px;
         -moz-box-shadow: 0 0 20px 1px rgba(0, 0, 0, .1);
         -webkit-box-shadow: 0 0 20px 1px rgba(0, 0, 0, .1);
@@ -416,23 +413,23 @@ a, a:visited, a:focus, a:active, a:hover {
     }
 
     .login-btn.link-color-change {
-        color: #00a5bd;
+        color: #fff;
     }
 
     .login-btn.link-color-change:hover {
         padding: 3px 15px;
         border-radius: 15px;
         background: rgba(0, 0, 0, 0);
-        color: #00a5bd;
-        box-shadow: inset 0 0 0 1px #00a5bd;
+        color: #fff;
+        box-shadow: inset 0 0 0 1px #FF4A17;
+    }
+    .get-start-btn.link-color-change {
+        background-color: #FF4A17;
     }
 
 }
 
 @media (min-width: 990px) {
-    .brand-image {
-        width: 200px;
-    }
 
     .menu-list li a, .get-start-link-wrapper a {
         font-size: 14px;
